hphp/hack/test/typecheck/is_expression/is_vector_access.php.exp
File "is_vector_access.php", line 7, characters 10-16:
This is not an object of type `KeyedContainer`, this is a value of generic type Tv#2 (Typing[4324])
  File "interfaces.hhi", line 92, characters 48-49:
  Definition is here
